# utf9k

./: .eleventy.js  .eleventyignore  .eslintrc.js  .gitignore  .rehyperc.mjs  .vale.ini  404.vto  CHANGELOG.adoc  CITATION.cff  CNAME  Dockerfile  Gemfile  LICENSE  Makefile  Pipfile  Procfile  README  README.adoc  README.md  README.org  _config.ts  _config.yml  _data.yml  _headers  _redirects  about.md  app.py  astro.config.mjs  astro.config.ts  blog-list.njk  blog.vto  books.njk  books.vto  buildspec.yml  bun.lockb  config.toml  config.yaml  debug.vto  deno.json  docker-compose.yml  (+49 more)
.forestry/: settings.yml
.github/: dependabot.yml
_astro/: astro.config.mjs  bun.lockb  package.json
_blog/: 2017-02-05-deepfakes.adoc  2017-12-18-wiki-thoughts.adoc  2017-12-24-arch-nuc-install.adoc  2018-02-15-day-xero.adoc  2018-02-28-lore-tabs.adoc  2018-08-18-nz-oia-guide.adoc  2018-12-03-automation-right.adoc  2018-12-12-lost-python-results.adoc  2019-03-20-future-of-emergency-services.adoc  2019-07-20-wsl2-vhd-issue.adoc  2019-07-29-retrieving-jenkins-credentials.adoc  2019-08-19-25.adoc  2019-09-26-email-lookup.adoc
_components/: notice.vto
_data/: books.js  books.yml  deploy.js  eleventyComputed.js  gags.json  (+10 more)
scripts/: common.py  convert-resume.py  download-dotfiles.py  earliest-annotation-rw.py  gather-filesizes.py  gather-image-metadata.py  gatherFilesizes.js  generate-fancylinks.py  generate-hardcover-csv.py  generate-osts.py  pyproject.toml  requirements.txt  resume.html.j2  social-image.py  sync-games.py  sync-manga.py  sync-reader.py  syncManga.ts  validate-urls.py
(+4112 files in other folders)
