[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Marcus Crane <marcus@utf9k.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0"
beautifulsoup4 = "^4.12.2"
pillow = "^10.0.0"
ruamel-yaml = "^0.17.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
